--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="propeller" content="e1478cf172b17efc13b29a3d1ad7cb85">
 <meta charset="utf-8" />
 <title>WIZKING FIFA22</title>
 <style type="text/css">
